--- a/client-novabook/src/main/resources/templates/adminPage.html
+++ b/client-novabook/src/main/resources/templates/adminPage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>HELLO WORLD</h1>
-<header th:insert="blocks/header" ::header></header>
+<header th:insert="~{blocks/header}"></header>
 
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 
