--- a/client-novabook/src/main/resources/templates/clientPage.html
+++ b/client-novabook/src/main/resources/templates/clientPage.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <h1 th:text="${user} + '; '">HELLO Client @{user}</h1>
-<header th:insert="blocks/header" ::header></header>
+<header th:insert="~{blocks/header}"></header>
+
+<a th:href="@{/client/token}">Tokens</a>
+<br>
+<a th:href="@{/client/idtoken}">IdToken</a>
 
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 
