--- a/client-novabook/src/main/resources/templates/index.html
+++ b/client-novabook/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@ Authenticated username:
 <div sec:authentication="name"></div>
 Authenticated user roles:
 <!--<div sec:authentication="principal.authorities"></div>-->
-<header th:insert="blocks/header" ::header></header>
+<header th:insert="~{blocks/header}"></header>
 
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
