--- a/authorization-server/src/main/resources/templates/login.html
+++ b/authorization-server/src/main/resources/templates/login.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Spring Boot Tutorial - Please Log In</title>
+    <title>NovaBook</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="login-page">
@@ -26,5 +27,6 @@
         <a th:href="@{/registration}">Registration</a>
     </div>
 </div>
+<!--<script th:src="@{/js/bootstrap.bundle.min.js}"></script>-->
 </body>
 </html>
