--- a/client-novabook/src/main/resources/templates/index.html
+++ b/client-novabook/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@ Authenticated user roles:
 <!--<div sec:authentication="principal.authorities"></div>-->
 <header th:insert="~{blocks/header}"></header>
 
+<footer th:insert="~{blocks/footer}"></footer>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
