--- a/client-novabook/src/main/resources/templates/adminPage.html
+++ b/client-novabook/src/main/resources/templates/adminPage.html
@@ -10,9 +10,25 @@
 <h1>HELLO WORLD</h1>
 <header th:insert="~{blocks/header}"></header>
 
+<table>
+    <thead>
+    <tr>
+        <th> Id </th>
+        <th> Email </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:if="${users.empty}">
+        <td colspan="2"> Nu Users Available </td>
+    </tr>
+    <tr th:each="user : ${users}">
+        <td><span th:text="${user.userId}"> Id </span></td>
+        <td><span th:text="${user.email}"> Email </span></td>
+    </tr>
+    </tbody>
+</table>
+
+<footer th:insert="~{blocks/footer}"></footer>
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
 </body>
 </html>
