--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -3,23 +3,27 @@
         <div class="col-2"></div>
         <div class="col-8">
     <!--        <img th:src="@{/avatar/{name}(name=${user.avatarName})}" class="rounded mx-auto d-block" alt="...">-->
-            <img th:src="@{/images/default.png}" class="rounded mx-auto d-block">
+            <div class="d-grid gap-2 col-6 mx-auto">
+            <img th:src="@{'/images/' + ${user.avatarName}}" class="rounded mx-auto d-block" width="200" height="250">
+            <a th:href="@{/client/edit}" class="btn btn-primary"
+                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                Редактировать
+            </a>
             </div>
             <div class="row px-2">
-                <div th:text="${user.firstName}">firstName</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${user.lastName}">lastName</div>
-            </div>
-
-            <div class="row px-2">
-                <div th:text="${user.patronymic}">patronymic</div>
+                <div th:text="${user.name}">Name</div>
             </div>
             <div class="row px-2">
                 <div th:text="${user.birthday}">birthday</div>
             </div>
             <div class="row px-2">
                 <div th:text="${user.registrationDate}">registrationDate</div>
+            </div>
+            <div class="row px-2">
+                <div th:text="${user.phone}">phone</div>
+            </div>
+            <div class="row px-2">
+                <div th:text="${user.email}">email</div>
             </div>
             <div class="row px-2">
                 <div th:text="${user.sex}">sex</div>
