--- a/client-novabook/src/main/resources/templates/blocks/header.html
+++ b/client-novabook/src/main/resources/templates/blocks/header.html
@@ -5,7 +5,7 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a th:href="@{/}" class="nav-link px-2 text-white">Главная</a></li>
-                    <li><a th:href="@{/client}" class="nav-link px-2 text-white">Клиент</a></li>
+                    <li><a th:href="@{/client}" class="nav-link px-2 text-white">Моя страница</a></li>
 <!--                    <li><a th:href="@{/}" class="nav-link px-2 text-white">Блоги</a></li>-->
 <!--                    <li><a th:href="@{/}" class="nav-link px-2 text-white">Дневник</a></li>-->
                     <li sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/admin}" class="nav-link px-2 text-white">Панель администратора</a></li>
