--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -4,7 +4,7 @@
         <div class="col-8">
     <!--        <img th:src="@{/avatar/{name}(name=${user.avatarName})}" class="rounded mx-auto d-block" alt="...">-->
             <div class="d-grid gap-2 col-6 mx-auto">
-            <img th:src="@{'/images/' + ${user.avatarName}}" class="rounded mx-auto d-block" width="200" height="250">
+            <img th:src="@{'/avatars/' + ${user.avatarName}}" class="rounded mx-auto d-block" width="200" height="250">
             <a th:href="@{/client/edit}" class="btn btn-primary"
                     style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
                 Редактировать
@@ -14,10 +14,10 @@
                 <div th:text="${user.name}">Name</div>
             </div>
             <div class="row px-2">
-                <div th:text="${user.birthday}">birthday</div>
+                <div th:text="${#temporals.format(user.birthday, 'dd-MM-yyyy')}">birthday</div>
             </div>
             <div class="row px-2">
-                <div th:text="${user.registrationDate}">registrationDate</div>
+                <div th:text="${#temporals.format(user.registrationDate, 'dd-MM-yyyy HH:mm')}">registrationDate</div>
             </div>
             <div class="row px-2">
                 <div th:text="${user.phone}">phone</div>
