--- a/client-novabook/src/main/resources/templates/blocks/user_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/user_block.html
@@ -1,34 +1,42 @@
 <div th:fragment="userInfo(user)">
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
+    <div class="row border">
+        <div class="col-2 border"></div>
+        <div class="col-8 border d-grid mx-auto">
     <!--        <img th:src="@{/avatar/{name}(name=${user.avatarName})}" class="rounded mx-auto d-block" alt="...">-->
-            <div class="d-grid gap-2 col-6 mx-auto">
-            <img th:src="@{'/avatars/' + ${user.avatarName}}" class="rounded mx-auto d-block" width="200" height="250">
+            <img th:src="@{'/avatars/' + ${user.avatarName}}" class="rounded mx-auto d-block img-fluid">
             <a th:href="@{/client/edit}" class="btn btn-primary"
                     style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
                 Редактировать
             </a>
-            </div>
-            <div class="row px-2">
-                <div th:text="${user.name}">Name</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${#temporals.format(user.birthday, 'dd-MM-yyyy')}">birthday</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${#temporals.format(user.registrationDate, 'dd-MM-yyyy HH:mm')}">registrationDate</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${user.phone}">phone</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${user.email}">email</div>
-            </div>
-            <div class="row px-2">
-                <div th:text="${user.sex}">sex</div>
-            </div>
         </div>
-        <div class="col-2"></div>
+        <div class="col-2 border"></div>
     </div>
+            <div class="row px-2 border">
+                <h2 th:text="${user.name}">Name</h2>
+            </div>
+            <div class="row px-2 border">
+                <h5>День рождения:
+                    <small class="text-muted" th:text="${#temporals.format(user.birthday, 'dd MMMM yyyy', new java.util.Locale('ru', 'RU'))}"></small>
+                </h5>
+            </div>
+            <div class="row px-2 border">
+                <h5>Дата регистрации:
+                    <small class="text-muted" th:text="${#temporals.format(user.registrationDate, 'dd MMMM yyyy HH:mm', new java.util.Locale('ru', 'RU'))}"></small>
+                </h5>
+            </div>
+            <div class="row px-2 border">
+                <h5>Телефон:
+                    <small class="text-muted" th:text="${user.phone}"></small>
+                </h5>
+            </div>
+            <div class="row px-2 border">
+                <h5>Email:
+                    <small class="text-muted" th:text="${user.email}"></small>
+                </h5>
+            </div>
+            <div class="row px-2 border">
+                <h5>Пол:
+                    <small class="text-muted" th:text="${user.sex}"></small>
+                </h5>
+            </div>
 </div>
