--- a/client-novabook/src/main/resources/templates/clientPage.html
+++ b/client-novabook/src/main/resources/templates/clientPage.html
@@ -13,12 +13,12 @@
 <br>
 <a th:href="@{/client/idtoken}">IdToken</a>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2">
+<div class="container-fluid border">
+    <div class="row border">
+        <div class="col-3 border">
             <div th:insert="~{blocks/user_block :: userInfo(${user})}"></div>
         </div>
-        <div class="col-10">
+        <div class="col-9 border">
             Колонка
         </div>
     </div>
