--- a/client-novabook/src/main/resources/templates/blocks/message.html
+++ b/client-novabook/src/main/resources/templates/blocks/message.html
@@ -1,4 +1,4 @@
-<div th:fragment="message(message)">
+<div th:fragment="comment(comment)">
     <div aria-live="polite" aria-atomic="true" class="position-relative">
         <!-- Position it: -->
         <!-- - `.toast-container` for spacing between toasts -->
@@ -10,7 +10,7 @@
                     <strong class="me-auto"><ya-tr-span data-index="104-0" data-translated="true" data-source-lang="en" data-target-lang="ru" data-value="Bootstrap" data-translation="Bootstrap" data-ch="0" data-type="trSpan">Уведомление</ya-tr-span></strong>
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
                 </div>
-                <div class="toast-body"><ya-tr-span data-index="105-0" data-ch="0" data-type="trSpan" data-selected="false" th:text="${message}"> Text message </ya-tr-span></div>
+                <div class="toast-body"><ya-tr-span data-index="105-0" data-ch="0" data-type="trSpan" data-selected="false" th:text="${comment}"> Text comment </ya-tr-span></div>
             </div>
         </div>
     </div>
