--- a/client-novabook/src/main/resources/templates/blocks/wall_block.html
+++ b/client-novabook/src/main/resources/templates/blocks/wall_block.html
@@ -1,4 +1,4 @@
-<div th:fragment="wall">
+<div th:fragment="wall" th:object="${wall}">
     <form th:if="${visitStatus.equals('owner')}" th:method="post"  th:action="@{/client/post}" id="postForm" th:object="${postDto}">
         <div class="mb-3 border">
             <input th:type="text" class="form-control" placeholder="Заголовок" th:field="*{postTitle}">
@@ -6,7 +6,7 @@
             <button type="submit" class="btn btn-primary" form="postForm">Добавить</button>
         </div>
     </form>
-    <div class="border" th:each="onePost:${wall.posts}">
+    <div class="border" th:each="onePost, postStat : *{posts}">
         <div class="row px-2 border">
             <div class="col-2 border">
                 <small class="text-muted" th:text="${#temporals.format(onePost.dateCreation, 'dd MMMM yyyy HH:mm', new java.util.Locale('ru', 'RU'))}"></small>
@@ -27,21 +27,17 @@
         <div class="row px-2 border">
             <nav class="navbar-sm">
                 <div class="container-fluid">
-                    <form th:method="post"  th:action="@{'/client/post/' + ${onePost.postId} + '/comment'}" id="'commentForm' + ${onePost.postId}" th:object="${commentDto}">
+                    <form th:method="post"  th:action="@{/client/post/{id}/comment (id=*{posts[__${postStat.index}__].postId})}">
 <!--                        <img th:src="@{'/avatars/' + ${user.avatarName}}" alt="mdo" width="35" height="35" class="rounded-circle">-->
-                        <input class="form-control me-2" th:field="*{text}" type="search" placeholder="Комментарий" aria-label="Комментарйи">
-<!--                        <button class="btn btn-sm btn-outline-secondary" type="button">Меньшая кнопка</button>-->
-                        <button class="btn btn-outline-success" type="submit" form="'commentForm' + ${onePost.postId}">Комментарий</button>
+                        <input class="form-control me-2" th:field="${commentDto.text}" type="search" placeholder="Комментарйи" aria-label="Комментарйи">
+                        <button class="btn btn-outline-success" type="submit">Комментарий</button>
                     </form>
                 </div>
             </nav>
-            <div class="container-fluid" th:each="comment:${onePost.comments}">
-<!--                  <form th:method="post"  th:action="@{'/client/post/' + ${onePost.postId} + '/comment'}" id="commentForm" th:object="${commentDto}">-->
-                <!--                        <img th:src="@{'/avatars/' + ${user.avatarName}}" alt="mdo" width="35" height="35" class="rounded-circle">-->
+            <div class="container-fluid" th:each="comment : ${onePost.comments}">
+                <img th:src="@{'/avatars/' + ${comment.avatarName}}" alt="mdo" width="35" height="35" class="rounded-circle">
+                <a class="text-muted" th:href="@{/client/{id} (id=${comment.ownerId})}" th:text="${comment.name}"></a>
                 <small class="text-muted" th:text="${comment.text}"></small>
-                <!--                        <button class="btn btn-sm btn-outline-secondary" type="button">Меньшая кнопка</button>-->
-<!--                      <button class="btn btn-outline-success" type="submit" form="commentForm">Комментарий</button>-->
-<!--                  </form>-->
             </div>
         </div>
     </div>
